hphp/hack/test/typecheck/tconst/method_contravariant.php.exp
File "method_contravariant.php", line 31, characters 14-15:
Invalid argument (Typing[4110])
File "method_contravariant.php", line 12, characters 39-45:
Expected <expr#1>::T
File "method_contravariant.php", line 31, characters 3-4:
  where '<expr#1>' is a reference to this expression
File "method_contravariant.php", line 31, characters 14-15:
But got string
